view related changes

--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-7.htm
@@ -27,7 +27,6 @@
   </ul>
 </div>
 <div class="Section1">
-  <p>&nbsp;</p>
   <p><span style="font-size: 10pt; font-family: Arial; ">The Java editor can be 
     configured to either show an entire compilation unit or a single Java element 
     only. Tto change the setting, use the toolbar button <b>Show Source of Selected 
@@ -39,23 +38,23 @@
   <ul type="Disc">
     <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">selecting 
       <b>Open With</b> &gt; <b>Java Editor</b> from a selection's pop-up menu 
-      in the Navigator, Package Explorer or Types view </span></li>
+      in the Navigator view, Package Explorer view or Types view </span></li>
     <li class="MsoNormal" style="color: black; ">clicking a Java file in the Navigator 
       or Package Explorer (see<b> </b>the <b>&nbsp;Window &gt; Preferences &gt; 
       Workbench </b>preference page to choose between single and double click 
       modes)</li>
     <li class="MsoNormal" style="color: black; ">clicking a Java type, method 
-      or field in the Package Explorer, Types, Members or Hierarchy view (see<b> 
+      or field in the Package Explorer view, Types view, Members view or Type Hierarchy view (see<b> 
       </b>the <b>&nbsp;Window &gt; Preferences &gt; Workbench </b>preference page 
       to choose between single and double click modes)</li>
     <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">single-clicking 
-      a currently-open Java file in the Navigator or Package Explorer. </span></li>
+      a currently-open Java file in the Navigator view or Package Explorer view. </span></li>
     <li class="MsoNormal" style="color: black; ">single-clicking a Java type, 
       method or field, with its compilation unit currently open, in &nbsp;the 
-      Package Explorer, Types, Members or Hierarchy view</li>
+      Package Explorer view, Types view, Members view or Type Hierarchy view</li>
     <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">selecting 
-      <b>Open</b> from the pop-up menu of either a type or a method in the Hierarchy, 
-      Members, Types or Package Explorer.</span></li>
+      <b>Open</b> from the pop-up menu of either a type or a method in the Type Hierarchy view, 
+      Members view, Types view or Package Explorer view.</span></li>
   </ul>
   <p><img width="159" height="27" id="_x0000_i1025" src="../images/ngrelc.gif" alt="Related concepts" border="0"></p>
   <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
