Added concepts and tasks

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-7.htm
@@ -228,7 +228,7 @@ line will disappear as the correction is applied.</td>
 <br><a href="../tasks/tasks-175.htm">Using QuickFix</a><a href="../tasks/tasks-106.htm"></a>
 <p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1027" height=27 width=159>
 <p><a href="../reference/ref-21.htm">Editor preference page</a>
-<br><a href="../reference/ref-java-editor-quickfix.htm">Quick Fix</a><a href="../../../reference/ref-java-editor-quickfix.htm"></a>
+<br><a href="../reference/ref-java-editor-quickfix.htm">Quick Fix</a>
 <p><a href="../hglegal2002.htm"><img SRC="../images/ngibmcpy2002.gif" ALT="Copyright IBM Corporation 2000, 2002. All Rights Reserved." BORDER=0 height=14 width=324></a></div>
 
 </body>
