--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-8.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-8.htm
@@ -139,7 +139,7 @@ undo buffer is cleared.</div>
 <p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
 <p><a href="../reference/ref-menu-refactor.htm">Refactoring actions</a>
 <br><a href="../reference/ref-117.htm">Refactoring wizard</a>
-<br><a href="../reference/ref-23.htm">Refactoring preferences</a><a href="../../../reference/ref-23.htm"></a>
+<br><a href="../reference/ref-23.htm">Refactoring preferences</a>
 <p><a href="../hglegal2002.htm"><img SRC="../images/ngibmcpy2002.gif" ALT="Copyright IBM Corporation 2000, 2002. All Rights Reserved." BORDER=0 height=14 width=324></a></div>
 
 </body>
