--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-9.htm
@@ -239,9 +239,7 @@ and Setter dialog</a>
 <br><a href="../reference/ref-17.htm">Code formatter preference page</a>
 <br><a href="../reference/ref-preferences-code-generation.htm">Code generation
 preference page</a>
-<br><a href="../reference/ref-preferences-templates.htm">Templates preference
-page</a>
-<br><a href="../../../reference/ref-126.htm"></a>&nbsp;
+<br><a href="../reference/ref-preferences-templates.htm">Templates preference page</a>
 <p><a href="../hglegal2002.htm"><img SRC="../images/ngibmcpy2002.gif" ALT="Copyright IBM Corporation 2000, 2002. All Rights Reserved." BORDER=0 height=14 width=324></a></div>
 
 </body>
