removed unnecessary spacing

--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-9.htm
@@ -31,17 +31,17 @@
   </ul>
   <p>Refactoring commands are available from the context menus of several Java 
     views (e.g. Package Explorer, Outline) and editors.</p>
-  <p><img width="159" height="27" id="_x0000_i1025" src="../images/ngrelc.gif" alt="Related concepts" border="0"></p>
-  <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
+  <p><img width="159" height="27" id="_x0000_i1025" src="../images/ngrelc.gif" alt="Related concepts" border="0"><br>
+    <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
   <p><img border="0" width="159" height="27" id="_x0000_i1026" src="../images/ngrelt.gif" alt="Related tasks"><br>
     <a href="../tasks/tasks-82.htm">Refactoring without preview</a><br>
     <a href="../tasks/tasks-83.htm">Refactoring with preview</a><br>
     <a href="../tasks/tasks-84.htm">Previewing refactoring changes</a><br>
     <a href="../tasks/tasks-100.htm">Undoing a refactoring operation</a><br>
     <a href="../tasks/tasks-101.htm">Redoing a refactoring operation</a><br>
-    &nbsp;</p>
-  <p><img border="0" width="159" height="27" id="_x0000_i1027" src="../images/ngrelr.gif" alt="Related reference"></p>
-  <p><a href="../reference/ref-menu-refactor.htm">Refactoring actions</a><br>
+  </p>
+  <p><img border="0" width="159" height="27" id="_x0000_i1027" src="../images/ngrelr.gif" alt="Related reference"><br>
+  <a href="../reference/ref-menu-refactor.htm">Refactoring actions</a><br>
     <a href="../reference/ref-117.htm">Refactoring wizard</a><br>
     <a href="../reference/ref-23.htm">Refactoring preferences</a><br>
     <a href="../reference/ref-154.htm">Extract Method Errors</a><br>
