--- a/bundles/org.eclipse.jdt.doc.user/concepts/cnls.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cnls.htm
@@ -35,7 +35,7 @@
   </li>
   <li>Support to find compilation units that contain not-externalized strings.</li>
   <li>A wizard that lets you externalize strings.</li>
-  <li>Suport for finding unused and incorrectly used keys for strings externalized 
+  <li>Support for finding unused and incorrectly used keys for strings externalized 
     to property files.</li>
 </ul>
 
