*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/concepts/cnls.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cnls.htm
@@ -53,10 +53,12 @@
       <img src="../images/ngrelr.gif" alt="Related reference" />
     </p>
 
-    <p>
-      <a href="../reference/ref-menu-source.htm">Source menu</a><br />
-      <a href="../reference/ref-wizard-externalize-strings.htm"">Externalize Strings wizard</a>
-    </p>
+    
+<p> <a href="../reference/ref-menu-source.htm">Source menu</a><br />
+  <a href="../reference/ref-wizard-externalize-strings.htm"">Externalize Strings 
+  wizard</a> </p>
+<p><a href="../reference/ref-preferences-compiler.htm">Compiler 
+  preferences</a></p>
 
   <p><br>
   <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a> 
