*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-14.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-14.htm
@@ -29,19 +29,19 @@ be automatically copied to the output folder.</div>
 >
 <b>New</b> > <b>Project</b>. The New Project wizard opens.</div>
 
-<div class="para">2. Select <b>Java</b> from the left pane and <b>Java
+<p class="para">2. Select <b>Java</b> from the left pane and <b>Java
 Project
 </b>from the right pane, then click <b>Next</b>. The New Java Project
-wizard opens.</div>
+wizard opens.
 
 
-<p class="para">3. In the&nbsp;<span class=label><b>Project Name</span></b>
+<p class="para">3. In the&nbsp;<span class=label><b>Project Name</b></span>
 field, type a name for your new Java project.
 
 <p class="para">4. Check or clear the <b>Use default</b> check box to indicate
 whether you want to use the default location for your new project. If you
 clear this check box, then type a path or click <b>Browse</b> to select
-a location for the project. Click&nbsp;<span class=label><b>Next</span></b>.
+a location for the project. Click&nbsp;<span class=label><b>Next</b></span>.
 The Java Settings Page opens.
 
 <p class="para">5. On the <b>Source</b> tab, select the <b>Use source folders
@@ -49,11 +49,11 @@ contained in the project </b>radio button to use project subfolders as
 source containers.
 
 <p class="para">6. Optionally, click the&nbsp;<span class=label><b>Create
-New Folder</span></b> button to create new source folder. You can also
+New Folder</b></span> button to create new source folder. You can also
 create new source folders at any time later.
 
 <p class="para">7. Optionally, replace the default name in the&nbsp;<span class=label><b>Build
-output folder</span></b> field to use a different name for the output folder.
+output folder</b></span> field to use a different name for the output folder.
 
 <p class="para">8. On the <b>Projects</b> tab, select the required projects
 to be on the build path for this project.
@@ -62,12 +62,12 @@ to be on the build path for this project.
 file containers to add to the build path for this new project and attach
 source to the JAR files.
 
-<p class="para">10. On the <b>Order and Export</b> tab, use the&nbsp;<span class=label><b>Up</span></b>
-and&nbsp;<span class=label><b>Down</span></b> buttons to move the selected
+<p class="para">10. On the <b>Order and Export</b> tab, use the&nbsp;<span class=label><b>Up</b></span>
+and&nbsp;<span class=label><b>Down</b></span> buttons to move the selected
 JAR file or CLASS file container up or down in the build path order for
 this new project.
 
-<p class="para">11. Click&nbsp;<span class=label><b>Finish</span></b> when
+<p class="para">11. Click&nbsp;<span class=label><b>Finish</b></span> when
 you are done.</div>
 
 <blockquote>
