--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-194.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-194.htm
@@ -25,9 +25,10 @@ To show compressed package names:
 Select the <b>Window > Preference > Java > Appearance > Compress package
 name segments</b> checkbox.</li>
 
-<p><br><b>Note:</b> A compression pattern can contain a digit (n), which
-represents n characters in the package name segment.
-<br>The compression pattern is not used if the resulting name is longer
+<p><br>
+    <b>Note:</b> A compression pattern can contain a digit (n), which represents 
+    the first n characters of a package name segment. <br>
+    The compression pattern is not used if the resulting name is longer
 than the original package name. For example, using a pattern <b>3~.</b>
 on a package named <b>org.eclipse.jdt</b> results in <b>org.ecl~.jdt</b></ul>
 <img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1026" height=27 width=159>
