--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-26.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-26.htm
@@ -18,18 +18,20 @@ Java source code.
 <p class="para">1. In the Package Explorer, select the project where you
 want the new source folder to reside.
 
-<p class="para">2. From the project's pop-up menu, select <b>New</b> >
-<b>Source Folder</b>.
+  <p class="para">2. From the project's pop-up menu, select <b>New</b> > <b>Others</b>. 
+    The new wizard opens. 
+  <p class="para">3. Select Java from the left pane and Source Folder from the right pane, 
+  then click Next. The New Source Folder wizard opens. 
 
-<p class="para">3. In the&nbsp;<span class=label><b>Project Name</span></b>
+  <p class="para">4. In the&nbsp;<span class=label><b>Project Name</b></span>
 field, the name of the selected project appears. If you need to edit this
-field, you can either type a path or click&nbsp;<span class=label><b>Browse</span></b>
+field, you can either type a path or click&nbsp;<span class=label><b>Browse</b></span>
 to choose a project that uses source folders.
 
-<p class="para">4. In the&nbsp;<span class=label><b>Folder Name</span></b>
+<p class="para">5. In the&nbsp;<span class=label><b>Folder Name</b></span>
 field, type a name for the new source folder.
 
-<p class="para">5. Click&nbsp;<span class=label><b>Finish</span></b> when
+<p class="para">6. Click&nbsp;<span class=label><b>Finish</b></span> when
 you are done.
 <p><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
 <br><a href="../concepts/concepts-3.htm">Java projects</a>
