--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-3.htm
@@ -15,22 +15,21 @@ Showing and hiding system files</h1>
 To show system files:
 
 <p class="para">1.<span style='font:7.0pt "Times New Roman"'></span> Select
-the&nbsp;<span class=label><b>Filters</span></b> command from the Package
+the&nbsp;<span class=label><b>Filters</b></span> command from the Package
 Explorer view drop-down menu.
 
-<p class="para">2.<span style='font:7.0pt "Times New Roman"'></span> Unselect
-the <b>hide&nbsp;<span></span>.*files</b> checkbox.
-
-<p class="para">To hide system files:
+  <p class="para">2.<span style='font:7.0pt "Times New Roman"'></span> Unselect 
+    the <b>hide&nbsp;<span></span>.* files</b> checkbox. 
+  <p class="para">To hide system files:
 
 <p class="para">1.<span style='font:7.0pt "Times New Roman"'></span> Select
-the&nbsp;<span class=label><b>Filters</span></b> command from the Package
+the&nbsp;<span class=label><b>Filters</b></span> command from the Package
 Explorer view drop-down menu.
 
-<p class="para">2.<span style='font:7.0pt "Times New Roman"'></span> Select
-the <b>hide&nbsp;<span></span>.*files</b> checkbox. This hides files that
-have only a file extension but no file name, such as&nbsp;<span class=filename>.classpath</span>.
-<p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1025" height=27 width=159>
+  <p class="para">2.<span style='font:7.0pt "Times New Roman"'></span> Select the 
+    <b>hide&nbsp;<span></span>.* files</b> checkbox. This hides files that have 
+    only a file extension but no file name, such as&nbsp;<span class=filename>.classpath</span>. 
+  <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1025" height=27 width=159>
 <br><a href="tasks-2.htm">Showing and hiding elements</a>
 <br><a href="tasks-47.htm">Filtering elements</a>
 <p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1026" height=27 width=159>
