--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-39.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-39.htm
@@ -12,30 +12,26 @@
 <div class=Section1>
 <h1>
 Opening a type hierarchy on a Java element</h1>
-There are five ways to open a type hierarchy. Select a java element in
-a Java view and:
-<ul>
-<li>
-Press <b>F4</b></li>
-
-<br>or
-<li>
-Choose <b>Open Type Hierarchy</b> from the view’s pop-up menu</li>
-
-<br>or
-<li>
-Drag and drop the element to the Hierarchy view</li>
-
-<br>or
-<li>
-Press <b>Ctrl+Shift+H</b> and select a type from the list in the resulting
-dialog (this works only for classes and interfaces)</li>
-
-<br>or
-<li>
-Select <b>Navigate > Open Type in Hierarchy</b> from the menu bar (this
-works only for classes and interfaces).</li>
-</ul>
+There are six ways to open a type hierarchy. Select a java element in a Java view 
+  and: 
+  <ul>
+    <li> Press <b>F4</b></li>
+    <br>
+    or 
+    <li> Choose <b>Open Type Hierarchy</b> from the view’s pop-up menu</li>
+    <br>
+    or 
+    <li> Drag and drop the element to the Hierarchy view</li>
+    <br>
+    or 
+    <li> Press <b>Ctrl+Shift+H</b> and select a type from the list in the resulting 
+      dialog (this works only for classes and interfaces)</li>
+    <br>
+    or 
+    <li> Select <b>Navigate > Open Type in Hierarchy</b> from the menu bar<br>
+      or</li>
+    <li>Select <b>Focus On...</b> from the pop-up menu of the type hierarchy viewer.</li>
+  </ul>
 
 <p><br><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
 <br><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
