--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-40.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-40.htm
@@ -16,14 +16,12 @@ Opening a type hierarchy on the current text selection</h1>
 <div class="head">To open a type hierarchy on a text selection, select
 the name of a Java element in the editor, and do one of the following:</div>
 
-<ul type=disc>
-<li class="MsoNormal" style="     ">
-Press <b>F4</b></li>
-
-<li class="MsoNormal" style="     ">
-select&nbsp;<span class=label><b>Open Type Hierarchy</span></b> from the
-editor's pop-up menu.</li>
-</ul>
+  <ul type=disc>
+    <li class="MsoNormal" style="     "> Press <b>F4</b></li>
+    <li class="MsoNormal" style="     "> select&nbsp;<span class=label><b>Open 
+      Type Hierarchy</b></span> from the editor's pop-up menu</li>
+    <li>select <b>Navigate &gt; Open Type Hierarchy</b> from the menu bar</li>
+  </ul>
 <b>Note:</b> If the selected Java element (or editor selection) is not
 a type or a compilation unit, the hierarchy will be open on the type enclosing
 the current selection.
