--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-5.htm
@@ -9,7 +9,6 @@
 </head>
 <body bgcolor="#FFFFFF" link="#0000FF" vlink="#0000FF" lang="EN-US" style="tab-interval:.5in">
 
-<div class=Section1>
 <h1>
 Showing and hiding libraries</h1>
 To show libraries:
@@ -38,7 +37,6 @@ Select the <b>Hide referenced libraries</b> checkbox.</li>
 Filters</a>
 <br><a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
 <br>&nbsp;
-<p><a href="../hglegal2002.htm"><img SRC="../images/ngibmcpy2002.gif" ALT="Copyright IBM Corporation 2000, 2002. All Rights Reserved." BORDER=0 height=14 width=324></a></div>
-
+<p><a href="../hglegal2002.htm"><img SRC="../images/ngibmcpy2002.gif" ALT="Copyright IBM Corporation 2000, 2002. All Rights Reserved." BORDER=0 height=14 width=324></a>
 </body>
 </html>
