--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-57.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-57.htm
@@ -23,10 +23,9 @@ generate accessors (or a type in which you want to create these methods).
 <p class="para">2. Select <b>Generate Getter and Setter</b> from the <b>Source</b>
 pop-up menu.
 
-<p class="para">3. A dialog will open to let you select&nbsp; which methods
-you want to created.
-
-<p class="para">4. Select the methods and press OK.
+  <p class="para">3. A dialog will open to let you select which methods you want 
+    to create. 
+  <p class="para">4. Select the methods and press OK.
 
 <p class="para"><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
 <br><a href="../concepts/concepts-7.htm">Java editor</a>
