--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-13.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-13.htm
@@ -9,50 +9,38 @@
 </head>
 <body bgcolor="#FFFFFF">
 
-<h1 CLASS="Head">
+<h1>
 Creating a Java project as its own source container</h1>
 
-<div CLASS="Para">For simple projects, the project itself can act as the
-source container.</div>
-
+For simple projects, the project itself acts as the
+source container.
+<p>
 <ol>
-<div CLASS="Para">From the main workbench window, click <b>File</b> > <b>New</b>
-> <b>Project</b>. The New Project wizard opens.</div>
-
-
-<p CLASS="Para">Select <b>Java</b> from the left pane and <b>Java Project
-</b>from the right pane, then click <b>Next</b>. The New Java Project wizard
-opens.
-
-<p CLASS="Para">In the&nbsp;<span CLASS="Label"><b>Project Name</span></b>
-field, type a name for your new Java project.
-
-<p CLASS="Para">Select or clear the <b>Use default</b> check box&nbsp;
-to indicate whether you want to use the default location for your new project.
-If you clear this check box, then type or click <b>Browse</b> to select
-a location for the project.
-
-<p CLASS="Para">Click <b>Next</b>. The Java Settings Page opens.
-
-<p CLASS="Para">On the <b>Source</b> tab, select the <b>Use the project
-as source container </b>radio button.
-
-<p CLASS="Para">Optionally, on the <b>Projects</b> tab, select the required
-projects to be on the build path for this project. Use these options only
-if your project depends on other projects.
-
-<p CLASS="Para">Optionally, on the <b>Libraries</b> tab, select JAR files
-and CLASS file containers to add to the build path for this new project
-and attach source to the JAR files. Use these options only if your project
-requires additional libraries.
-
-<p CLASS="Para">On the <b>Order and Export</b> tab, use the&nbsp;<span CLASS="Label"><b>Up</span></b>
-and&nbsp;<span CLASS="Label"><b>Down</span></b> buttons to move the selected
-JAR file or CLASS file container up or down in the build path order for
-this new project.
-
-<p CLASS="Para">Click&nbsp;<span CLASS="Label"><b>Finish</span></b> when
-you are done.</ol>
+  <li>From the main workbench window, click <b>File</b> > <b>New</b> > <b>Project</b>. 
+    The New Project wizard opens.</li>
+  <li>Select <b>Java</b> from the left pane and <b>Java Project </b>from the right 
+    pane, then click <b>Next</b>. The New Java Project wizard opens.</li>
+  <li>In the&nbsp;<span CLASS="Label"><b>Project Name</b></span> field, type a 
+    name for your new Java project.</li>
+  <li>Select or clear the <b>Use default</b> check box&nbsp; to indicate whether 
+    you want to use the default location for your new project. If you clear this 
+    check box, then type or click <b>Browse</b> to select a location for the project.</li>
+  <li>Click <b>Next</b>. The Java Settings Page opens.</li>
+  <li>On the <b>Source</b> tab, select the <b>Use the project as source container 
+    </b>radio button.</li>
+  <li>Optionally, on the <b>Projects</b> tab, select the required projects to 
+    be on the build path for this project. Use these options only if your project 
+    depends on other projects.</li>
+  <li>Optionally, on the <b>Libraries</b> tab, select JAR files and CLASS file 
+    containers to add to the build path for this new project and attach source 
+    to the JAR files. Use these options only if your project requires additional 
+    libraries.</li>
+  <li>On the <b>Order and Export</b> tab, use the&nbsp;<span CLASS="Label"><b>Up</b></span> 
+    and&nbsp;<span CLASS="Label"><b>Down</b></span> buttons to move the selected 
+    JAR file or CLASS file container up or down in the build path order for this 
+    new project.</li>
+  <li>Click&nbsp;<span CLASS="Label"><b>Finish</b></span> when you are done.</li>
+</ol>
 <img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159>
 <p><a href="../concepts/concepts-3.htm">Java projects</a>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
