--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-21.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-21.htm
@@ -21,7 +21,7 @@ interface. There are a number of ways to open this wizard:</div>
 Select the container where you want the new class to reside.</li>
 
 <li class="MsoNormal" style="     ">
-Click the&nbsp;<span class=label><b>Create a Java Interface</span></b>
+Click the&nbsp;<span class=label><b>Create a Java Interface</b></span>
 button in the workbench toolbar.</li>
 </ol>
 or
@@ -38,18 +38,18 @@ or
 Select the container where you want the new class to reside.</li>
 
 <li class="MsoNormal" style="     ">
-From the drop-down menu on the&nbsp;<span class=label><b>Open The New Wizard</span></b>
+From the drop-down menu on the&nbsp;<span class=label><b>Open The New Wizard</b></span>
 button in the workbench toolbar, select <b>Interface</b>.</li>
 </ol>
 or
 
 <p class="MsoNormal">&nbsp;&nbsp;&nbsp; Click the&nbsp;<span class=label><b>Open
-The New Wizard</span></b> button. In the left pane, select <b>Java</b>,
+The New Wizard</b></span> button. In the left pane, select <b>Java</b>,
 and in the right pane, select <b>Interface</b>.
 <p>or
-<p>&nbsp;&nbsp;&nbsp; Select the container where you want the new package
-to reside. Then, from the menu bar select <b>File</b> > <b>New</b> > <b>Interface</b>
-<p><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
+  <p>&nbsp;&nbsp;&nbsp; Select the container where you want the new interface 
+    to reside. Then, from the menu bar select <b>File</b> > <b>New</b> > <b>Interface</b> 
+  <p><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
 <p><a href="../concepts/concepts-3.htm">Java projects</a>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1026" height=27 width=159>
 <p><a href="tasks-23.htm">Creating a top-level interface</a>
