--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-45.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-45.htm
@@ -1,14 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><HTML>
 <HEAD>
+<title>Using the Package Explorer view</title>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 <link REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 </head>
 <body bgcolor="#FFFFFF">
 <h1 CLASS="Head">
-Using the Package Explorer</h1>
-&nbsp;
-<p>&nbsp;
+Using the Package Explorer view</h1>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
 <br><a href="tasks-47.htm">Filtering elements</a>
 <br><a href="tasks-2.htm">Showing and hiding elements</a>
