*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_options.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_options.htm
@@ -402,7 +402,7 @@ When enabling this option, the compiler will issue an error or a warning for hid
 <td colspan=2><b>Specify Default Source Encoding Format</b>   (<a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#CORE_ENCODING">CORE_ENCODING</a>)</td>
 </tr>
 <tr valign="top">
-<td rowspan=1>Get the encoding format for compiled sources. This setting is read-only, it is equivalent to 'ResourcesPlugin.getEncoding()'.</td>
+<td rowspan=1>Get the encoding format for compiled sources. This setting is read-only, it is equivalent to <a HREF="../../org.eclipse.platform.doc.isv/reference/api/org/eclipse/core/resources/ResourcesPlugin.html#getEncoding()">ResourcesPlugin.getEncoding()</a>.</td>
 <td>any of the supported encoding name. <br><b><i>Default value is platform default</i></b></td>
 </tr>
 </tr>
