[TB] sentence style captialisation

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-22.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-22.htm
@@ -9,8 +9,7 @@
 </head>
 <body bgcolor="#FFFFFF">
 
-<h1 CLASS="Head">
-Opening the New Java Interface wizard</h1>
+<h1 CLASS="Head"> Opening the New Java Interface Wizard</h1>
 
 <div CLASS="Para">From the Package Explorer, do one of the following:</div>
 
@@ -19,7 +18,7 @@ Opening the New Java Interface wizard</h1>
 Select the resource where you want the new interface to reside.</li>
 
 <li CLASS="Item">
-Click the&nbsp;<span CLASS="Label"><b>Create a Java Interface</span></b>
+Click the&nbsp;<span CLASS="Label"><b>Create a Java Interface</b></span>
 button in the workbench toolbar.</li>
 </ol>
 or
@@ -37,12 +36,12 @@ Select the resource where you want the new interface to reside.</li>
 
 <li CLASS="Item">
 From the drop-down menu on the&nbsp;<span CLASS="Label"><b>Open The New
-Wizard</span></b> button in the workbench toolbar, select <b>Java Interface</b>.</li>
+Wizard</b></span> button in the workbench toolbar, select <b>Java Interface</b>.</li>
 </ol>
 or
 <ol CLASS="UnorderedList">
 <li CLASS="Item">
-Click the&nbsp;<span CLASS="Label"><b>Open The New Wizard</span></b> button.</li>
+Click the&nbsp;<span CLASS="Label"><b>Open The New Wizard</b></span> button.</li>
 
 <li CLASS="Item">
 In the left pane, select <b>Java</b>, and in the right pane, select <b>Java
