--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-46.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-46.htm
@@ -8,8 +8,7 @@
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Navigating Packages</H1>
+<H1 CLASS="Head"> Navigating packages</H1>
 <P CLASS="Para">
 The Package Explorer that is shown by default in the Java perspective shows the Java element hierarchy of the Java projects in your workbench. It provides you with a Java-specific view of the resources shown in the Navigator. The element hierarchy is derived from the project's build paths. </P>
 <P CLASS="Para">
