--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-50.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-50.htm
@@ -8,8 +8,7 @@
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Reorganizing a Project Using Drag-and-Drop</H1>
+<H1 CLASS="Head"> Reorganizing a project using Drag-and-Drop</H1>
 <P CLASS="Para">
 In the Package Explorer, you can use drag-and-drop to reorganize your projects.</P>
 <P>&nbsp;<br>
