--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-55.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-55.htm
@@ -8,8 +8,7 @@
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Adding Elements to Java Code</H1>
+<H1 CLASS="Head"> Adding elements to Java Code</H1>
 <P CLASS="Para">
 You can add new elements to your Java code.</P>
 <P>&nbsp;<br>
