--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-81.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-81.htm
@@ -8,8 +8,7 @@
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Refactoring Steps</H1>
+<H1 CLASS="Head"> Refactoring steps</H1>
 <P CLASS="Para">
 The goal of refactoring support is to improve your code without changing its behavior.</P>
 <P CLASS="Para">
