renamed Date to TestCase

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-153.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-153.htm
@@ -15,7 +15,7 @@ Using Content Assist/Code Assist</h1>
 <div CLASS="Para">The scrapbook editor supports code assist.</div>
 
 
-<p CLASS="Para">For example, type&nbsp;<span CLASS="Filename">Date&nbsp;</span>in
+<p CLASS="Para">For example, type&nbsp;<span CLASS="Filename">TestCase&nbsp;</span>in
 the scrapbook editor and press Ctrl+Space. Code assist prompts you with
 possible completions.
 <div CLASS="Figure"><img SRC="../images/tasks-46.gif" height=182 width=381>
