*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_codeassist.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_codeassist.htm
@@ -32,7 +32,7 @@ Code completion</h3>
 Performing a code completion
 </h4>
 <P>
-The only way to programmatically perform code completion is to use <b><a href="../reference/api/org/eclipse/jdt/core/ICodeAssist.html#codeComplete(int, org.eclipse.jdt.core.ICompletionRequestor)"> ICodeAssist.codeComplete()</a></b>.
+The only way to programmatically perform code completion is to use <b><a href="../reference/api/org/eclipse/jdt/core/ICodeAssist.html#codeComplete(int, org.eclipse.jdt.core.ICompletionRequestor)"> ICodeAssist.codeComplete</a></b>.
 You specify the location of the completion in the unit and provide an instance of <b><a href="../reference/api/org/eclipse/jdt/core/ICompletionRequestor.html"> ICompletionRequestor</a></b> to accept the possible completions.</P>
 
 <P>
@@ -88,7 +88,7 @@ Code selection</h3>
 Performing a code selection
 </h4>
 <P>
-If you want to programmatically perform code selection, the method to use is <b><a href="../reference/api/org/eclipse/jdt/core/ICodeAssist.html#codeSelect(int, int)"> ICodeAssist.codeSelect()</a></b>. This method needs to know the start location of the selection and the length.
+If you want to programmatically perform code selection, the method to use is <b><a href="../reference/api/org/eclipse/jdt/core/ICodeAssist.html#codeSelect(int, int)"> ICodeAssist.codeSelect</a></b>. This method needs to know the start location of the selection and the length.
 The result is an array of Java elements. Most of the time there is only one element in the array, but if the selection is ambiguous then all the possible elements are returned.
 
 <font color='#4444CC'><pre>
