--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-188.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-188.htm
@@ -15,7 +15,7 @@ To find strings to externalize:
 <ul>
 <li>
 In a Java view (e.g. Package Explorer), select a set (which can contain
-a sinlge element) of packages, source folders or projects.</li>
+a single element) of packages, source folders or projects.</li>
 
 <li>
 From the menu bar, select <b>Source > Find Strings to Externalize</b></li>
