Spelling and layout corrections

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-171.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-171.htm
@@ -18,9 +18,9 @@
     a template. </li>
   <li> Invoke content assist by pressing <kbd>Ctrl</kbd>+<kbd>Space</kbd>. </li>
   <li> Templates show up in the presented list. Note that the list is filtered 
-    as you type, so typing a few first character of a template name will reveal 
+    as you type, so typing a few first characters of a template name will reveal 
     it. </li>
-  <li>Note that previews are presented for each selected template.</li>
+  <li>Note that a preview is presented for each selected template.</li>
 </ol>
 <div class="copyright"> 
   <p><b>Notes:</b> </p>
@@ -41,11 +41,10 @@
   <p>Example:</p>
 </div>
 <ul>
-  <li> 
-    <div class="copyright">Create a method a method <code>void m(int [] foos){} 
-      </code>and position the caret inside the method.</div>
+  <li>Create a method <code>void m(int [] foos){}</code> and position the caret 
+  inside the method.
   </li>
-  <li>Type<code> for</code> and press <kbd>Ctrl+Space</kbd> to open Code Assist</li>
+  <li>Type <code>for</code> and press <kbd>Ctrl+Space</kbd> to open Code Assist</li>
   <li>Select the first entry from the list (i.e.<b>for - iterate over array</b>). 
     Note the template preview window.</li>
   <li>Note also that the name of the array (i.e. <code>foos</code>) is automatically 
@@ -60,8 +59,8 @@
     <ul>
       <li>press <kbd>Tab</kbd> or <kbd>Enter</kbd>, which will move the caret 
         so that you can enter the body of the newly created loop or</li>
-      <li>press <kbd>Esc</kbd>, which will not move the caret and leave the preserve 
-        the current selection in the editor.</li>
+      <li>press <kbd>Esc</kbd>, which will not move the caret and preserves the 
+        current selection in the editor.</li>
     </ul>
   </li>
 </ul>
