--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-181.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-181.htm
@@ -36,10 +36,9 @@ to replace</li>
 Optionally, in the&nbsp;<span class="Label">Replace With</span> field,
 enter the next text</li>
 
-<li>
-Using the radio buttons in the&nbsp;<span class="Label">Direction</span>
-group, select the direction of finding occurrences (relative the current
-caret position)</li>
+  <li> Use the radio buttons in the&nbsp;<span class="Label">Direction</span> 
+    group to select the direction of finding occurrences (relative to the current 
+    caret position)</li>
 
 <li>
 In the&nbsp;<span class="Label">Scope</span> radio button group:</li>
