--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-182.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-182.htm
@@ -19,9 +19,8 @@ Using Incremental Find</h1>
 In the text (or Java) editor, press <tt>Ctrl</tt>+<tt>J</tt> or select&nbsp;<span class="Label">Edit
 > Incremental Find</span> from the menu bar</li>
 
-<li>
-The workbench status line displays Incremental Find: information which
-is updated as you type. The editor is now in the Incremental Find mode.</li>
+  <li> The workbench status line displays &quot;Incremental Find:&quot;. The editor 
+    is now in the Incremental Find mode.</li>
 
 <li>
 As you type, the editor finds the next occurrence of the text and updates
