--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-67.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-67.htm
@@ -27,18 +27,12 @@ then all of the editor content is formatted.
 
 <p class="head">3.<span style='font:7.0pt "Times New Roman"'></span>Format
 the code by either
+<ul>
+	<li>Selecting Format from the editor's pop-up menu or</li>
+	<li>Pressing <b>Ctrl+Shift+F</b> or</li>
+	<li>Selecting<b>Source > Format</b> from the menu bar.</li>
+</ul>
 
-<p class="head"><span style='font-family:Symbol'>&middot;<span 
-style='font:7.0pt "Times New Roman"'></span></span>Selecting
-Format from the editor's pop-up menu or
-
-<p class="head"><span style='font-family:Symbol'>&middot;<span 
-style='font:7.0pt "Times New Roman"'></span></span>Pressing
-<b>Ctrl+Shift+F</b> or
-
-<p class="head"><span style='font-family:Symbol'>&middot;<span 
-style='font:7.0pt "Times New Roman"'></span></span>Selecting
-<b>Source > Format</b> from the menu bar.
 <p><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
 <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
 <br><a href="../concepts/concepts-7.htm">Java editor</a>
