--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-70.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-70.htm
@@ -15,8 +15,7 @@ You can use hover help to view various kinds of information in the marker bar in
 <UL CLASS="UnorderedList">
 <LI CLASS="Item">
 Information about problems</LI>
-<LI CLASS="Item">
-Variable values</LI>
+  <LI CLASS="Item"> Information about breakpoints</LI>
 </UL>
 <P CLASS="Para">
 Hover your mouse pointer over the marker in the marker bar to view any available hover help.</P>
