--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-6.htm
@@ -13,14 +13,14 @@
 <h1>
 Showing single elements or whole Java files</h1>
 
-<div class="para">To display the selected Java file in a single element
-view, click the&nbsp;<span 
-class=label><b>Show Source of Selected Element
-Only</span></b> button in the workbench toolbar, so that it is depressed.</div>
+  <div class="para">To display the selected Java file in a single element view, 
+    click the&nbsp;<span 
+class=label><b>Show Source of Selected Element Only</b></span> button in the workbench 
+    toolbar, so that it is pressed.</div>
 
-<div class="para">To display the selected Java file in a whole (non-segmented)
-view, click the&nbsp;<span class=label><b>Show Source of Selected Element
-Only</span></b> button in the workbench toolbar, so that it is not depressed.</div>
+  <div class="para">To display the selected Java file in a whole (non-segmented) 
+    view, click the&nbsp;<span class=label><b>Show Source of Selected Element 
+    Only</b></span> button in the workbench toolbar, so that it is not pressed.</div>
 
 <p><b>Note:</b> this toolbar button is enabled only when a Java editor
 is open.
