--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-63.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-63.htm
@@ -16,9 +16,9 @@
   <p class=head> 3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> Activate the editor by clicking its tab in the editor area. The Java 
     view also displays the Java file.</p>
-  <p class=head>Note: The Package Explorer can be configured to show or not 
-    show Java elements in files. Use <b>Window &gt; Preferences &gt; Java &gt; 
-    Appearance &gt; Show Members in Package Explorer</b> to set you preference.</p>
+  <p class=head>Note: The Package Explorer can be configured to show or not show 
+    Java elements in files. Use <b>Window &gt; Preferences &gt; Java &gt; Appearance 
+    &gt; Show Members in Package Explorer</b> to set your preference.</p>
   <p class=head> 4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> Select the element that you want to replace.</p>
   <p class=head> 5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
