--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-64.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-64.htm
@@ -12,7 +12,7 @@
     </span> Ensure that a Java view that show Java elements inside files (such 
     as the Outline view) is visible.</p>
   <p class=head> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> Open the compilation unit to which you want to add a previously-removed 
+    </span> Open the compilation unit to which you want to add a previously removed 
     Java element from the local history.</p>
   <p class=head> 3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> Activate the editor by clicking its tab in the editor area, and the 
